--- a/stile.css
+++ b/stile.css
@@ -1,38 +1,31 @@
-body.sito{
-        background-image: url('Luka_backyard.jpg');
-        background-repeat: no-repeat;
-        background-size: 100%;
-}
-/* The side navigation menu */
+/* Il menu di fianco */
 .menu {
-    height: 100%; /* 100% Full-height */
-    width: 0; /* 0 width - change this with JavaScript */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Stay on top */
-    top: 0; /* Stay at the top */
+    height: 100%; 
+    width: 0; /* La larghezza viene poi modificata con javascript */
+    position: fixed; /* Resta stabile */
+    /*z-index: 1; /* Stay on top */
+    top: 0; /* Altrimenti il quando si apre menu la scritta Menu resta visibile */
     left: 0;
     background-color: #B8B8B8;
-    overflow-x: hidden; /* Disable horizontal scroll */
-    padding-top: 60px; /* Place content 60px from the top */
-    transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+    overflow-x: hidden; /* Altrimenti si vedono i link del menu quando è chiuso */
+    padding-top: 60px; 
+    transition: 0.5s;
   }
   
-  /* The navigation menu links */
+  /* Link nel menu */
   .menu a {
     padding: 8px 8px 8px 32px;
     text-decoration: none;
-    font-size: 25px;
+    font-size: 30px;
     color: #818181;
     display: block;
     transition: 0.3s;
   }
-  
-  /* When you mouse over the navigation links, change their color */
   .menu a:hover {
     color: #A80000;
   }
   
-  /* Position and style the close button (top right corner) */
+  /* Stile del closebutton*/
   .menu .closebtn {
     position: absolute;
     top: 0;
@@ -40,21 +33,16 @@ body.sito{
     font-size: 36px;
     margin-left: 50px;
   }
-  
-  /* Style page content - use this if you want to push the page content to the right when you open the side navigation */
-  #main {
-    transition: margin-left .5s;
-    padding: 20px;
+
+  body.index{
+    background-image: url('https://img.freepik.com/free-vector/minimal-geometric-stripe-shape-background_1409-1014.jpg?size=626&ext=jpg&ga=GA1.1.386372595.1698105600&semt=ais');/*url('https://img.freepik.com/premium-vector/abstract-white-monochrome-vector-background-design-brochure-website-flyer-geometric-white-wallpaper-certificate-presentation-landing-page_249611-5918.jpg');*/
+    background-repeat: no-repeat;
+    background-size: 100%;
   }
-    /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
-    @media screen and (max-height: 450px) {
-      .menu {padding-top: 15px;}
-      .menu a {font-size: 18px;}
-    }
-  
-  div.secondary {
+  div.Youth {
     font-family: Arial, Helvetica, sans-serif;
-    background-color: rgb(227, 223, 223);
+    background-image: url('sfondo_youth.jpg');
+    color:antiquewhite;
     padding-left: 5px;
     padding-right: 15px;
     padding-top: 3px;
