--- a/stile.css
+++ b/stile.css
@@ -3,8 +3,7 @@
     height: 100%; 
     width: 0; /* La larghezza viene poi modificata con javascript */
     position: fixed; /* Resta stabile */
-    /*z-index: 1; /* Stay on top */
-    top: 0; /* Altrimenti il quando si apre menu la scritta Menu resta visibile */
+    top: 0; /* Altrimenti quando si apre menu la scritta Menu resta visibile */
     left: 0;
     background-color: #B8B8B8;
     overflow-x: hidden; /* Altrimenti si vedono i link del menu quando è chiuso */
@@ -46,7 +45,6 @@
     padding-left: 5px;
     padding-right: 15px;
     padding-top: 3px;
-
   }
   body.secondary{
     background-color: rgb(39, 39, 39);
